# rust-cli-template

./: Cargo.toml  build.rs
src/: logs.rs  main.rs  shells.rs
