[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
