[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.59", features = ["derive"] }
clap_complete = "4.5.66"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
